--- a/packages/web/src/app/doc-pages/components/forms/search-doc/search-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/search-doc/search-doc.component.html
@@ -22,8 +22,8 @@
           />
         </div>
         <i class="e-icon e-icon--search-color"></i>
-        <button class="e-btn e-btn--icon" (click)="clearExample()">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+        <button class="e-btn e-btn--icon" (click)="clearExample()" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
         </button>
       </div>
     </div>
