--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.html
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.html
@@ -5,10 +5,14 @@
     </a>
   </div>
   <div class="closing">
-    <button class="e-btn e-btn--icon e-btn--circled e-btn--lg e-m-16" (click)="onClose()">
+    <button
+      class="e-btn e-btn--icon e-btn--circled e-btn--lg e-m-16"
+      (click)="onClose()"
+      aria-label="Close menu"
+    >
       <span class="e-btn__icon">
-        <i class="e-icon e-icon--remove_circle-color"></i>
-        <i class="e-icon e-icon--remove_circle-filled-color"></i>
+        <i class="e-icon e-icon--remove_circle-color" aria-hidden="true"></i>
+        <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true"></i>
       </span>
     </button>
   </div>
