--- a/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
@@ -109,9 +109,9 @@
             <div class="e-form-field">
               <label class="e-form-field__label" for="invalid">Label</label>
               <div class="e-input e-input---invalid">
-                <button class="e-btn e-btn--icon" (click)="showMockPassword()">
+                <button class="e-btn e-btn--icon" (click)="showMockPassword()" aria-label="Vis/skjul passord">
                   <span class="e-btn__icon">
-                    <i class="e-icon e-icon--view_on"></i>
+                    <i class="e-icon e-icon--view_on" aria-hidden="true"></i>
                   </span>
                 </button>
                 <input id="validationExample" type="password" value="Passord" invalid #validationExample />
