--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
@@ -91,9 +91,14 @@
               <input id="searchIcons" type="text" placeholder="Search through all icons" [(ngModel)]="term" />
             </div>
             <i class="e-icon e-icon--search-color"></i>
-            <button class="e-btn e-btn--icon" *ngIf="term.length > 0" (click)="removeSearch()">
+            <button
+              class="e-btn e-btn--icon"
+              *ngIf="term.length > 0"
+              (click)="removeSearch()"
+              aria-label="Empty search field"
+            >
               <span class="e-btn__icon">
-                <i class="e-icon e-icon--close-bold"></i>
+                <i class="e-icon e-icon--close-bold" aria-hidden="true"></i>
               </span>
             </button>
           </div>
