--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
@@ -11,10 +11,10 @@
       <div class="e-mr-8">
         {{ copyMessage }}
       </div>
-      <button class="e-btn e-btn--icon e-btn--sm e-btn--inverted" (click)="copyCode()">
+      <button class="e-btn e-btn--icon e-btn--sm e-btn--inverted" (click)="copyCode()" aria-label="Copy code">
         <span class="e-btn__icon">
-          <i class="e-icon e-icon--copy"></i>
-          <i class="e-icon e-icon--copy e-icon--inverted"></i>
+          <i class="e-icon e-icon--copy" aria-hidden="true"></i>
+          <i class="e-icon e-icon--copy e-icon--inverted" aria-hidden="true"></i>
         </span>
       </button>
     </div>
