--- a/packages/web/src/app/doc-pages/components/file-upload-doc/file-upload-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/file-upload-doc/file-upload-doc.component.html
@@ -13,13 +13,13 @@
     <div class="liveExample e-mt-40">
       <div class="e-fileupload" style="width: 380px" appDnd>
         <div class="e-fileupload__icon">
-          <i class="e-icon e-icon--image_add-color"></i>
+          <i class="e-icon e-icon--image_add-color" aria-hidden="true"></i>
         </div>
         <div class="e-fileupload__description">Drag and drop or</div>
         <div class="e-fileupload__input">
           <input type="file" id="fileUploadTemplate" />
           <label for="fileUploadTemplate">
-            <i class="e-icon e-icon--upload"></i>
+            <i class="e-icon e-icon--upload" aria-hidden="true"></i>
             Choose file
           </label>
         </div>
