--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -10,9 +10,9 @@
 <div class="page-body">
   <!--TEMPORARY WAY TO SHOW LIVE EXAMPLES BEFORE CODE-GENERATOR-->
   <div class="e-my-48" class="component-preview-temp component-preview-animation">
-    <div class="e-alert e-mt-24">
+    <div class="e-alert e-mt-24" role="alert">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--remove_circle e-icon--color-red"></i>
+        <i class="e-icon e-icon--remove_circle e-icon--color-red" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">Short title</div>
@@ -353,7 +353,9 @@
       <div class="alert-status e-mt-80">
         <div class="alert-icons">
           <div class="e-bg-red e-mr-24" style="padding: 24px; height: 24px; border-radius: 50%"></div>
-          <div><i class="e-icon e-icon--remove_circle e-icon--color-red e-icon--xl"></i></div>
+          <div>
+            <i class="e-icon e-icon--remove_circle e-icon--color-red e-icon--xl" aria-hidden="true"></i>
+          </div>
         </div>
         <div>
           <div class="title e-title-caps">
@@ -374,7 +376,9 @@
       <div class="alert-status">
         <div class="alert-icons">
           <div class="e-bg-orange e-mr-24" style="padding: 24px; height: 24px; border-radius: 50%"></div>
-          <div><i class="e-icon e-icon--warning_circle e-icon--color-orange e-icon--xl"></i></div>
+          <div>
+            <i class="e-icon e-icon--warning_circle e-icon--color-orange e-icon--xl" aria-hidden="true"></i>
+          </div>
         </div>
         <div>
           <div class="title e-title-caps">
@@ -395,7 +399,9 @@
       <div class="alert-status">
         <div class="alert-icons">
           <div class="e-bg-green e-mr-24" style="padding: 24px; height: 24px; border-radius: 50%"></div>
-          <div><i class="e-icon e-icon--check_circle e-icon--color-green e-icon--xl"></i></div>
+          <div>
+            <i class="e-icon e-icon--check_circle e-icon--color-green e-icon--xl" aria-hidden="true"></i>
+          </div>
         </div>
         <div>
           <div class="title e-title-caps">
@@ -414,7 +420,9 @@
       <div class="alert-status">
         <div class="alert-icons">
           <div class="e-bg-grey e-mr-24" style="padding: 24px; height: 24px; border-radius: 50%"></div>
-          <div><i class="e-icon e-icon--information_circle e-icon--color-grey e-icon--xl"></i></div>
+          <div>
+            <i class="e-icon e-icon--information_circle e-icon--color-grey e-icon--xl" aria-hidden="true"></i>
+          </div>
         </div>
         <div>
           <div class="title e-title-caps">
