--- a/packages/elvis/src/components/form/toggle.scss
+++ b/packages/elvis/src/components/form/toggle.scss
@@ -43,7 +43,9 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
   }
 
   & input[type='checkbox'] {
-    -moz-appearance: initial;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
   }
 
   &__input {
