Input, link and search accessibility

--- a/packages/web/src/app/doc-pages/components/link-doc/link-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/link-doc/link-doc.component.html
@@ -104,7 +104,8 @@
       <app-component-subsection [sectionTitle]="'Label'">
         <ng-container ngProjectAs="sectionContent">
           Use meaningful labels for links and avoid terms like “click here”, and try to cut down the
-          unnecessary words. Try to reflect the content user will find when clicking on the link.
+          unnecessary words. Try to reflect the content user will find when clicking on the link. The label
+          should be able to make sense on its own without the surrounding sentence or content.
           <app-do-dont-text>
             <ng-container ngProjectAs="do">
               <a class="e-link" href="https://design.elvia.io">See our power outage map</a>
