--- a/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
@@ -48,7 +48,7 @@
   <!--CHANGELOG-->
   <app-component-section [sectionTitle]="'Changelog'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-changelog [componentData]="componentData"></app-component-changelog>
+      <app-component-changelog [changelog]="componentData.changelog"></app-component-changelog>
     </ng-container>
   </app-component-section>
 </div>
