--- a/packages/web/src/app/doc-pages/other-pages/changelog/changelog.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/changelog/changelog.component.html
@@ -8,5 +8,5 @@
 
 <!--BODY-->
 <div class="page-body">
-  <app-component-changelog [showAll]="true" [componentData]="componentData"></app-component-changelog>
+  <app-component-changelog [showAll]="true" [changelog]="changelog"></app-component-changelog>
 </div>
