--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -126,7 +126,7 @@
           <!-- <div class="e-mt-n48" style="padding-top: 0px" markdown [src]="'assets/changelogs/elvis/CHANGELOG.md'"></div> -->
           <!--CHANGELOG-->
 
-          <app-component-changelog [componentData]="componentData"></app-component-changelog>
+          <app-component-changelog [changelog]="changelog"></app-component-changelog>
         </div>
         <div class="e-mt-48" style="display: flex; justify-content: center">
           <a class="e-link e-link--action" [routerLink]="['/about/whats-new']">
