Removed function creating error. Fixes

--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -5,7 +5,11 @@
       <th class="changelog-date py-0" scope="col">Date and version</th>
       <th class="changelog-content py-0" scope="col">Changes</th>
     </tr>
-    <tr class="changelog-row changelog-divider py-5" *ngFor="let el of changelog">
+    <tr
+      class="changelog-row py-5"
+      [ngClass]="{ 'changelog-divider': !isLast }"
+      *ngFor="let el of isFrontpage ? changelog.slice(0, 1) : changelog; last as isLast"
+    >
       <td class="changelog-date">
         <span class="e-title-sm">{{ el.version }}</span>
         <br />
