--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -126,7 +126,7 @@
           <app-component-changelog
             [isFrontpage]="true"
             [changelog]="changelog"
-            [showAll]="true"
+            [hasAccordion]="false"
           ></app-component-changelog>
         </div>
         <div style="display: flex; justify-content: center">
