--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -123,9 +123,13 @@
       <div class="home-whats-new">
         <div class="e-title-md e-mb-56" style="display: flex; justify-content: center">What's new?</div>
         <div>
-          <app-component-changelog [changelog]="changelog"></app-component-changelog>
+          <app-component-changelog
+            [isFrontpage]="true"
+            [changelog]="changelog"
+            [hasAccordion]="false"
+          ></app-component-changelog>
         </div>
-        <div class="e-mt-48" style="display: flex; justify-content: center">
+        <div style="display: flex; justify-content: center">
           <a class="e-link e-link--action" [routerLink]="['/about/whats-new']">
             <span class="e-link__title">View changelog</span>
             <span class="e-link__icon">
