--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -211,8 +211,41 @@
       </table>
     </div>
 
-    <div class="e-title-xs e-my-16">Sorting</div>
+    <div class="e-title-xs e-my-16">No stripes</div>
+    <div class="e-table-container">
+      <table class="e-table e-table--no-stripes" aria-label="Beskrivelse av tabellen">
+        <thead>
+          <tr>
+            <th scope="col">Periode</th>
+            <th scope="col">Status</th>
+            <th scope="col" class="e-text-right">Beløp</th>
+            <th scope="col" class="e-text-right">Faktura nr.</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Januar 2020</th>
+            <td>Sendt</td>
+            <td class="e-text-right">567,98 kr</td>
+            <td class="e-text-right">123456</td>
+          </tr>
+          <tr>
+            <th scope="row">Februar 2020</th>
+            <td>Betalt</td>
+            <td class="e-text-right">543,10 kr</td>
+            <td class="e-text-right">123456</td>
+          </tr>
+          <tr>
+            <th scope="row">Mars 2020</th>
+            <td>Betalt</td>
+            <td class="e-text-right">568,98 kr</td>
+            <td class="e-text-right">123456</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
+    <div class="e-title-xs e-my-16">Sorting</div>
     <div class="e-table-container">
       <table class="e-table" aria-label="Beskrivelse av tabellen">
         <thead>
