--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -252,19 +252,10 @@
   <!--Spotlight-->
   <div class="example-wrapper">
     <h3>Spotlight</h3>
-    <elvia-spotlight
+    <!-- <elvia-spotlight
       [position]="{ horizontalPosition: 100, verticalPosition: 100 }"
       [radius]="500"
-    ></elvia-spotlight>
-    <!-- <svg style="position: fixed; top: 0; left: 0; z-index: 99999; width: 100vw; height: 100vh">
-      <defs>
-        <mask id="hole">
-          <rect width="100%" height="100%" fill="white"></rect>
-          <circle r="50" cx="300" cy="300" fill="black"></circle>
-        </mask>
-      </defs>
-      <rect fill="rgba(0,0,0,0.25)" width="100%" height="100%" mask="url(#hole)"></rect>
-    </svg> -->
+    ></elvia-spotlight> -->
   </div>
 
   <!--Tabs-->
