--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -1,6 +1,6 @@
 @use '../../variables/colors.scss';
-@use "../../variables/typography";
-@use "../../utilities/icons.scss";
+@use '../../variables/typography';
+@use '../../utilities/icons.scss';
 
 .e-form-field {
   // Variable containing '&' to jump to current parent inside a child class.
@@ -89,6 +89,10 @@
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-size: 12px;
       line-height: 16px;
+    }
+
+    input:disabled {
+      color: colors.color('disabled');
     }
   }
 }
