--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -252,10 +252,7 @@
   <!--Spotlight-->
   <div class="example-wrapper">
     <h3>Spotlight</h3>
-    <!-- <elvia-spotlight
-      [position]="{ horizontalPosition: 100, verticalPosition: 100 }"
-      [radius]="500"
-    ></elvia-spotlight> -->
+    <!-- <elvia-spotlight [position]="{ horizontal: 300, vertical: 300 }" [radius]="80"></elvia-spotlight> -->
   </div>
 
   <!--Tabs-->
