update slot logic, change dev examples

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -7,10 +7,9 @@
     <!--Normal version-->
     <div class="e-bg-white">
       <elvia-popover header="BankID" type="list" hasDivider posX="right">
-        <button slot="trigger" className="e-btn">Show popover</button>
-        <!-- <div slot="content"> -->
-        <div slot="content" className="ewc-popover__list">
-          <div className="ewc-popover__list-group">
+        <button slot="trigger" class="e-btn">Show popover</button>
+        <div slot="content" class="ewc-popover__list">
+          <div class="ewc-popover__list-group">
             <h1>Title 1</h1>
             <button>
               <elvia-icon name="edit" size="xs"></elvia-icon>
@@ -25,7 +24,7 @@
               <span>Last ned</span>
             </a>
           </div>
-          <div className="ewc-popover__list-group">
+          <div class="ewc-popover__list-group">
             <h1>Title 2</h1>
             <button>
               <elvia-icon name="edit" size="xs"></elvia-icon>
@@ -41,7 +40,6 @@
             </a>
           </div>
         </div>
-        <!-- </div> -->
       </elvia-popover>
     </div>
     <!--Inverted version-->
