--- a/packages/web/src/app/doc-pages/components/spotlight-doc/spotlight-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/spotlight-doc/spotlight-doc.component.html
@@ -30,15 +30,20 @@
       <app-component-subsection [sectionTitle]="'Radius'">
         <ng-container ngProjectAs="sectionContent">
           To find the correct radius you need to find the largest measurement, either height or width of the
-          element and then you can use this formula:
+          element. This formula can be helpful to find the correct radius:
           <div class="code-text e-mt-40">radius = ((Math.max(width, height)/2) + 24px)</div>
         </ng-container>
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Position'">
         <ng-container ngProjectAs="sectionContent">
-          To find the center of the element and therefore circle you can use these formulas:
+          To find the center of the element which is where the circle will start from, you can use these
+          formulas:
           <div class="code-text e-mt-40">horizontal = rect.left + rect.width / 2</div>
           <div class="code-text e-mt-16">vertical = rect.top + rect.height / 2</div>
+          <div class="code-text e-mt-40">
+            Remember to also listen to the scroll-position and update position of the element if it is
+            possible to scroll on your page.
+          </div>
         </ng-container>
       </app-component-subsection>
     </ng-container>
