--- a/packages/web/src/app/doc-pages/components/modal-doc/modal-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/modal-doc/modal-doc.component.html
@@ -92,7 +92,7 @@
   </app-component-section>
 
   <!--PROPERTIES-->
-  <app-component-section [sectionTitle]="'Properties'" [propertiesClass]="'e-modal'">
+  <app-component-section [sectionTitle]="'Properties'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-properties-table [componentData]="componentData"></app-component-properties-table>
     </ng-container>
