--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -19,7 +19,9 @@
           <span *ngIf="prop.isRequired">*</span>
         </th>
         <td class="table-code-text">{{ prop.type }}</td>
-        <td class="e-table__cell--multiline-small">{{ prop.description }}</td>
+        <td class="e-table__cell--multiline-small">
+          <div class="properties-description-desktop">{{ prop.description }}</div>
+        </td>
         <td class="table-code-text" *ngIf="prop.default">{{ prop.default }}</td>
         <td class="table-code-text" *ngIf="!prop.default">-</td>
       </tr>
